--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,32 @@ html {
 body {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.6rem;
+  height: 100%;
+}
+
+nav {
+  width: 100%;
+  height: 60px;
+  background-color: yellow;
+}
+nav .navcontact {
+  width: 100%;
+  height: 30px;
+  background-color: red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: none;
+}
+nav .navcontact p {
+  padding: 0em 1em;
+}
+nav .navcontact i {
+  color: var(--colot-darkone);
 }/*# sourceMappingURL=style.css.map */
