--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -1,2 +1,19 @@
 @media (min-width: 768px) {
+	nav {
+		.navcontact {
+			width: 100%;
+			height: 30px;
+			background-color: var(--color-lightthree);
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			display: flex;
+			p {
+				padding: 0em 1em;
+			}
+			i {
+				color: var(--colot-darkone);
+			}
+		}
+	}
 }
