--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@
 	--color-mediumone: #396d7c;
 	--color-mediumtwo: #137a7f;
 	--color-mediumthree: #257ca3;
-	--colot-darkone: #373b3e;
+	--color-darkone: #373b3e;
 	--color-dark: #000000;
 	--color-other: #e12885;
 }
@@ -30,26 +30,80 @@ html {
 body {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 1.6rem;
-	height: 100%;
 }
 
 nav {
 	width: 100%;
 	height: 60px;
-	background-color: yellow;
+	position: fixed;
+	top: 0;
 	.navcontact {
+		display: none;
+	}
+	.wrapper {
 		width: 100%;
-		height: 30px;
-		background-color: red;
+		height: 100%;
+		position: relative;
 		display: flex;
 		align-items: center;
-		justify-content: center;
-		display: none;
-		p {
-			padding: 0em 1em;
+		justify-content: space-between;
+		padding: 0em 3em;
+		background-color: var(--color-lightone);
+		border-bottom: 0.04em solid var(--color-darkone);
+		.logo {
+			width: 30%;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			a {
+				img {
+					width: 50%;
+					height: 50%;
+				}
+			}
 		}
-		i {
-			color: var(--colot-darkone);
+
+		.navbar {
+			width: 100%;
+			height: 100vh;
+			position: absolute;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-around;
+			padding: 8em 0em 12em 0em;
+			top: 60px;
+			left: 0;
+			background-color: var(--color-lightthree);
+			transform: translateX(-100%);
+			&__link {
+				color: var(--color-darkone);
+				font-size: 2em;
+				text-decoration: none;
+				padding-bottom: 0.1em;
+				transition: all 0.3s ease-in-out;
+				display: flex;
+				justify-content: center;
+				&:hover {
+					border-bottom: 0.08em solid var(--color-mediumtwo);
+					color: var(--color-mediumtwo);
+				}
+			}
+		}
+
+		.actionnav {
+			transform: translateX(0);
+		}
+
+		.burger {
+			font-size: 3rem;
+			padding: 0.4em;
+			color: var(--color-mediumtwo);
+			cursor: pointer;
+			.hide {
+				display: none;
+			}
 		}
 	}
 }
