--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,15 +51,16 @@ nav {
 		background-color: var(--color-lightone);
 		border-bottom: 0.04em solid var(--color-darkone);
 		.logo {
-			width: 30%;
-			height: 100%;
+			width: 50%;
+			height: 50%;
+			margin: 0.6em;
 			display: flex;
 			justify-content: center;
 			align-items: center;
 			a {
 				img {
-					width: 50%;
-					height: 50%;
+					width: 30%;
+					height: 30%;
 				}
 			}
 		}
@@ -76,7 +77,7 @@ nav {
 			top: 60px;
 			left: 0;
 			background-color: var(--color-lightthree);
-			transform: translateX(-100%);
+			// transform: translateX(-100%);
 			&__link {
 				position: relative;
 				color: var(--color-darkone);
@@ -103,9 +104,9 @@ nav {
 			}
 		}
 
-		.actionnav {
-			transform: translateX(0);
-		}
+		// .actionnav {
+		// 	transform: translateX(0);
+		// }
 
 		.burger {
 			font-size: 3rem;
