--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -3,7 +3,7 @@
 		.navcontact {
 			width: 100%;
 			height: 30px;
-			background-color: var(--color-lightthree);
+			background-color: var(--color-lightone);
 			display: flex;
 			align-items: center;
 			justify-content: center;
@@ -12,7 +12,7 @@
 				padding: 0em 1em;
 			}
 			i {
-				color: var(--colot-darkone);
+				color: var(--color-darkone);
 			}
 		}
 		.wrapper {
