--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,9 +82,9 @@ nav {
 			&__link {
 				position: relative;
 				color: var(--color-darkone);
-				font-size: 2em;
+				font-size: 3rem;
 				text-decoration: none;
-				padding-bottom: 0.1em;
+				padding-bottom: 0.4em;
 				transition: border-bottom 0.3s ease-in-out;
 				display: flex;
 				justify-content: center;
