--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+section {
+  padding: 6em 2em 2em 2em;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
 *,
 *::before,
 *::after {
@@ -144,6 +153,40 @@ nav .wrapper .burger {
 }
 nav .wrapper .burger .hide {
   display: none;
+}
+
+.sectionhome {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+.sectionhome .info {
+  width: 100%;
+  height: 270px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.sectionhome .info__heading {
+  padding-bottom: 0.2em;
 }
 
 @media (max-width: 576px) {
