--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@ h1 {
   font-size: 3rem;
 }
 
+.line {
+  margin: 0.2em 0;
+  width: 50%;
+  height: 8px;
+  background-color: #86cecb;
+}
+
 *,
 *::before,
 *::after {
@@ -18,6 +25,7 @@ h1 {
 
 :root {
   --color-white: #ffffff;
+  --color-whiteBlend: rgba(255, 255, 255, 0.7);
   --color-lightone: #dcf3ff;
   --color-lighttwo: #baf2ef;
   --color-lightthree: #a2d2df;
@@ -45,6 +53,7 @@ nav {
   height: 60px;
   position: fixed;
   top: 0;
+  z-index: 100;
 }
 nav .navcontact {
   display: none;
@@ -172,6 +181,7 @@ nav .wrapper .burger .hide {
   height: 100%;
 }
 .sectionhome .info {
+  padding: 1em;
   width: 100%;
   height: 270px;
   display: -webkit-box;
@@ -184,9 +194,61 @@ nav .wrapper .burger .hide {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 1em;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  opacity: 0;
+  -webkit-transition: opacity 2s ease-in-out, -webkit-transform 1s;
+  transition: opacity 2s ease-in-out, -webkit-transform 1s;
+  transition: transform 1s, opacity 2s ease-in-out;
+  transition: transform 1s, opacity 2s ease-in-out, -webkit-transform 1s;
 }
 .sectionhome .info__heading {
-  padding-bottom: 0.2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.sectionhome .info__text p {
+  margin-top: 1em;
+}
+.sectionhome .actioninfo {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+.sectionhome .image {
+  position: relative;
+  width: 100%;
+}
+.sectionhome .image img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.sectionhome .image__info {
+  position: absolute;
+  padding: 0.6em;
+  right: 5%;
+  bottom: 0%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  background-color: var(--color-whiteBlend);
+}
+.sectionhome .image__info .logo {
+  width: 30%;
 }
 
 @media (max-width: 576px) {
