--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@
 
 :root {
 	--color-white: #ffffff;
+	--color-whiteBlend: rgba(255, 255, 255, 0.7);
 	--color-lightone: #dcf3ff;
 	--color-lighttwo: #baf2ef;
 	--color-lightthree: #a2d2df;
@@ -37,6 +38,7 @@ nav {
 	height: 60px;
 	position: fixed;
 	top: 0;
+	z-index: 100;
 	.navcontact {
 		display: none;
 	}
@@ -130,13 +132,51 @@ nav {
 	align-items: center;
 	height: 100%;
 	.info {
+		padding: 1em;
 		width: 100%;
 		height: 270px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		margin-bottom: 1em;
+		transform: translateY(50%);
+		opacity: 0;
+		transition: transform 1s, opacity 2s ease-in-out;
 		&__heading {
-			padding-bottom: 0.2em;
+			display: flex;
+			flex-direction: column;
+			// padding-bottom: 1em;
+		}
+		&__text {
+			p {
+				margin-top: 1em;
+			}
+		}
+	}
+	.actioninfo {
+		transform: translateY(0);
+		opacity: 1;
+	}
+	.image {
+		position: relative;
+		width: 100%;
+		img {
+			width: 100%;
+			object-fit: cover;
+		}
+		&__info {
+			position: absolute;
+			padding: 0.6em;
+			right: 5%;
+			bottom: 0%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			width: 100%;
+			background-color: var(--color-whiteBlend);
+			.logo {
+				width: 30%;
+			}
 		}
 	}
 }
