added styles in small for section home

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,7 +128,7 @@ nav {
 .sectionhome {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 	height: 100%;
 	.info {
