--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,9 @@ nav .wrapper .burger .hide {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -269,6 +269,31 @@ nav .wrapper .burger .hide {
   nav .wrapper .navbar__link {
     padding-bottom: 0.8em;
     font-size: 1.8rem;
+  }
+  .sectionhome {
+    padding: 4em 2em 2em 2em;
+    height: 100vh;
+  }
+  .sectionhome .info {
+    padding: 0.2em;
+    height: 40%;
+    margin-bottom: 1em;
+  }
+  .sectionhome .info__heading--head {
+    font-size: 2rem;
+  }
+  .sectionhome .info p {
+    font-size: 1.3rem;
+  }
+  .sectionhome .image {
+    height: 40%;
+  }
+  .sectionhome .image img {
+    width: 100%;
+    height: 100%;
+  }
+  .sectionhome .image__info h1 {
+    font-size: 2rem;
   }
 }
 @media (min-width: 768px) {
