--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -21,4 +21,34 @@
 			}
 		}
 	}
+
+	.sectionhome {
+		padding: 4em 2em 2em 2em;
+		height: 100vh;
+		.info {
+			padding: 0.2em;
+			height: 40%;
+			margin-bottom: 1em;
+			&__heading {
+				&--head {
+					font-size: 2rem;
+				}
+			}
+			p {
+				font-size: 1.3rem;
+			}
+		}
+		.image {
+			height: 40%;
+			img {
+				width: 100%;
+				height: 100%;
+			}
+			&__info {
+				h1 {
+					font-size: 2rem;
+				}
+			}
+		}
+	}
 }
