--- a/sass/style.scss
+++ b/sass/style.scss
@@ -131,6 +131,7 @@ nav {
 	justify-content: space-between;
 	align-items: center;
 	height: 100%;
+	overflow: hidden;
 	.info {
 		padding: 1em;
 		width: 100%;
