--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -10,5 +10,54 @@ h1 {
 	margin: 0.2em 0;
 	width: 50%;
 	height: 8px;
+	background-color: #396d7c;
+}
+
+button {
+	position: relative;
+	width: 100%;
+	padding: 0.4em 1em;
+	background: none;
 	background-color: #86cecb;
+	border-radius: 0.4em;
+	border: 0.04em solid #396d7c;
+	text-transform: uppercase;
+	font-weight: 700;
+	cursor: pointer;
+	z-index: 1;
+	overflow: hidden;
+	transition: color 0.5s ease-in-out;
+	&::before {
+		position: absolute;
+		content: '';
+		width: 120%;
+		height: 130%;
+		background-color: #396d7c;
+		border-radius: 0.4em;
+		z-index: -1;
+		transform: translate(-130%, -25%);
+		filter: blur(0.2em);
+		transition: transform 0.5s ease-in-out;
+	}
+	&:hover::before {
+		transform: translate(-20%, -25%);
+	}
+	&::after {
+		position: absolute;
+		content: '';
+		width: 120%;
+		height: 130%;
+		background-color: #396d7c;
+		border-radius: 0.4em;
+		z-index: -1;
+		transform: translate(30%, -25%);
+		filter: blur(0.2em);
+		transition: transform 0.5s ease-in-out;
+	}
+	&:hover::after {
+		transform: translate(-80%, -25%);
+	}
+	&:hover {
+		color: #ffffff;
+	}
 }
