--- a/sass/_xlarge.scss
+++ b/sass/_xlarge.scss
@@ -17,7 +17,8 @@
 			&__text {
 				display: flex;
 				flex-direction: column;
-				align-self: flex-end;
+				justify-content: space-between;
+				padding-bottom: 0.4em;
 				p {
 					font-size: 1.6em;
 				}
@@ -30,20 +31,30 @@
 		.image {
 			width: 55%;
 			height: 100%;
-			padding: 4em 2em;
+			padding: 4em 1em;
 			img {
-				height: 75%;
+				width: 100%;
+				height: 72%;
 				object-fit: cover;
-				object-position: 480%;
+				object-position: 130%;
 				// object-position: left;
 			}
 			&__info {
 				width: 100%;
+				height: 25%;
 				position: relative;
 				align-items: center;
 				justify-content: center;
 				padding-bottom: 1em;
 				border-bottom: 0.5em solid #396d7c;
+				.logo {
+					position: absolute;
+					top: 5%;
+				}
+				h1 {
+					padding-bottom: 0;
+					padding-top: 2em;
+				}
 			}
 		}
 	}
