--- a/sass/_xxlarge.scss
+++ b/sass/_xxlarge.scss
@@ -34,21 +34,26 @@
 			}
 		}
 		.image {
+			// width: 70%;
 			position: relative;
 			img {
-				width: 85%;
+				width: 100%;
 				height: 100%;
 				object-position: top;
+				object-position: 26%;
+				object-fit: cover;
 			}
 			&__info {
 				position: absolute;
-				padding: 0.6em;
-				right: 5%;
+				padding: 0.2em;
+				right: 0%;
 				bottom: 2%;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+				justify-content: space-around;
 				width: 100%;
+				height: 28%;
 				background-color: var(--color-whiteBlend);
 				border-bottom: none;
 				.logo {
