--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ button:hover {
   --color-lighttwo: #baf2ef;
   --color-lightthree: #a2d2df;
   --color-lightfour: #86cecb;
-  --color-lightfourBlend: rgba(134, 206, 202, 0.6);
+  --color-lightfourBlend: rgba(134, 206, 202, 0.7);
   --color-mediumone: #396d7c;
   --color-mediumtwo: #137a7f;
   --color-mediumthree: #257ca3;
@@ -382,7 +382,7 @@ nav .wrapper .burger .hide {
 }
 .aboutus .infomobile .infocount__count {
   font-size: 4rem;
-  font-weight: 100;
+  font-weight: 400;
   color: var(--color-mediumtwo);
 }
 .aboutus .infomobile .infocount h3 {
@@ -402,13 +402,10 @@ nav .wrapper .burger .hide {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: var(--color-lightfourBlend);
-  border-top-left-radius: 2em;
-  -webkit-box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
-          box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
   overflow: hidden;
 }
 .aboutus .box__info {
+  padding: 1em;
   width: 60%;
   height: 100%;
   display: -webkit-box;
@@ -421,6 +418,10 @@ nav .wrapper .burger .hide {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background-color: var(--color-lightfourBlend);
+  border-top-left-radius: 2em;
+  -webkit-box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
+          box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
 }
 .aboutus .box__info--heading {
   font-weight: 100;
