--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@
 	--color-lighttwo: #baf2ef;
 	--color-lightthree: #a2d2df;
 	--color-lightfour: #86cecb;
-	--color-lightfourBlend: rgba(134, 206, 202, 0.6);
+	--color-lightfourBlend: rgba(134, 206, 202, 0.7);
 	--color-mediumone: #396d7c;
 	--color-mediumtwo: #137a7f;
 	--color-mediumthree: #257ca3;
@@ -225,7 +225,7 @@ nav {
 			}
 			&__count {
 				font-size: 4rem;
-				font-weight: 100;
+				font-weight: 400;
 				color: var(--color-mediumtwo);
 			}
 			h3 {
@@ -241,16 +241,17 @@ nav {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		background-color: var(--color-lightfourBlend);
-		border-top-left-radius: 2em;
-		box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
 		overflow: hidden;
 		&__info {
+			padding: 1em;
 			width: 60%;
 			height: 100%;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
+			background-color: var(--color-lightfourBlend);
+			border-top-left-radius: 2em;
+			box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
 			&--heading {
 				font-weight: 100;
 				font-size: 3.6rem;
