--- a/sass/style.scss
+++ b/sass/style.scss
@@ -188,12 +188,12 @@ nav {
 
 // ---ABOUT US---
 
-.aboutus {
+.sectionaboutus {
 	height: 100%;
 	padding: 0em;
 	background-image: url('../img/hospital_buoldig.jpg');
 	background-repeat: no-repeat;
-	background-size: cover;
+	// background-size: cover;
 	background-size: 175%;
 	background-position: 0% 165px;
 	background-attachment: fixed;
