--- a/css/style.css
+++ b/css/style.css
@@ -323,8 +323,9 @@ nav .wrapper .burger .hide {
   padding: 0em;
   background-image: url("../img/hospital_buoldig.jpg");
   background-repeat: no-repeat;
-  background-size: 175%;
-  background-position: 0% 165px;
+  background-size: cover;
+  background-size: 275%;
+  background-position: 0% 65px;
   background-attachment: fixed;
   overflow: hidden;
   display: -webkit-box;
@@ -367,7 +368,7 @@ nav .wrapper .burger .hide {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   padding: 1em;
-  margin-bottom: 12em;
+  margin-bottom: 8em;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -388,10 +389,10 @@ nav .wrapper .burger .hide {
   font-size: 1.8rem;
 }
 .sectionaboutus .box {
-  padding: 1em;
+  padding: 2em;
   margin-bottom: 2em;
-  width: 90%;
-  height: 230px;
+  width: 100%;
+  height: 260px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -421,10 +422,22 @@ nav .wrapper .burger .hide {
   border-top-left-radius: 2em;
   -webkit-box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
           box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
+  -webkit-transform: translateY(30%);
+          transform: translateY(30%);
+  opacity: 0;
+  -webkit-transition: opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
 }
 .sectionaboutus .box__info--heading {
   font-weight: 100;
   font-size: 3.6rem;
+}
+.sectionaboutus .box .actionaboutus {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 .sectionaboutus .box__img {
   width: 35%;
