--- a/sass/style.scss
+++ b/sass/style.scss
@@ -193,9 +193,9 @@ nav {
 	padding: 0em;
 	background-image: url('../img/hospital_buoldig.jpg');
 	background-repeat: no-repeat;
-	// background-size: cover;
-	background-size: 175%;
-	background-position: 0% 165px;
+	background-size: cover;
+	background-size: 275%;
+	background-position: 0% 65px;
 	background-attachment: fixed;
 	overflow: hidden;
 	display: flex;
@@ -215,7 +215,7 @@ nav {
 			flex-direction: column;
 			justify-content: space-around;
 			padding: 1em;
-			margin-bottom: 12em;
+			margin-bottom: 8em;
 			align-items: center;
 			border-top-left-radius: 2em;
 			background-color: var(--color-lightfourBlend);
@@ -234,10 +234,10 @@ nav {
 		}
 	}
 	.box {
-		padding: 1em;
+		padding: 2em;
 		margin-bottom: 2em;
-		width: 90%;
-		height: 230px;
+		width: 100%;
+		height: 260px;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -252,15 +252,21 @@ nav {
 			background-color: var(--color-lightfourBlend);
 			border-top-left-radius: 2em;
 			box-shadow: 0.4em 0.4em 0em var(--color-lightfour);
+			transform: translateY(30%);
+			opacity: 0;
+			transition: transform 0.5s ease-in-out, opacity 1s ease-in-out;
 			&--heading {
 				font-weight: 100;
 				font-size: 3.6rem;
 			}
 		}
+		.actionaboutus {
+			transform: translateY(0);
+			opacity: 1;
+		}
 		&__img {
 			width: 35%;
 			height: 100%;
-			// padding: 1em;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
