--- a/css/style.css
+++ b/css/style.css
@@ -425,10 +425,10 @@ nav .wrapper .burger .hide {
   -webkit-transform: translateY(30%);
           transform: translateY(30%);
   opacity: 0;
-  -webkit-transition: opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
-  transition: opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
-  transition: transform 0.5s ease-in-out, opacity 1s ease-in-out;
-  transition: transform 0.5s ease-in-out, opacity 1s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  -webkit-transition: opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
 }
 .sectionaboutus .box__info--heading {
   font-weight: 100;
@@ -485,7 +485,7 @@ nav .wrapper .burger .hide {
     font-size: 2.4rem;
   }
   .sectionhome {
-    padding: 2em;
+    padding: 4em 2em 2em 2em;
     height: 100vh;
   }
   .sectionhome .info {
