--- a/sass/_large.scss
+++ b/sass/_large.scss
@@ -11,4 +11,36 @@
 			}
 		}
 	}
+
+	.sectionaboutus {
+		.infomobile {
+			.infocount {
+				i {
+					font-size: 4rem;
+				}
+				&__count {
+					font-size: 6rem;
+				}
+				h3 {
+					font-size: 2.8rem;
+					font-weight: 100;
+				}
+			}
+		}
+		.box {
+			&__info {
+				&--heading {
+					font-size: 4.2rem;
+				}
+				&--text {
+					font-size: 2rem;
+				}
+			}
+			&__img {
+				img {
+					height: 75%;
+				}
+			}
+		}
+	}
 }
