--- a/sass/_xxlarge.scss
+++ b/sass/_xxlarge.scss
@@ -63,4 +63,16 @@
 			}
 		}
 	}
+	.sectionaboutus {
+		.infomobile {
+			width: 75%;
+			height: 40%;
+			.infocount {
+				height: 100%;
+			}
+		}
+		.box {
+			width: 75%;
+		}
+	}
 }
