--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -27,6 +27,14 @@ button {
 	z-index: 1;
 	overflow: hidden;
 	transition: color 0.5s ease-in-out;
+	a {
+		text-decoration: none;
+		color: #000000;
+		transition: color 0.4s ease-in-out;
+		&:hover {
+			color: #ffffff;
+		}
+	}
 	&::before {
 		position: absolute;
 		content: '';
