--- a/sass/style.scss
+++ b/sass/style.scss
@@ -281,6 +281,14 @@ nav {
 	}
 }
 
+// ---GALLERY CLINIC---
+
+.galleryclinic {
+	padding: 0;
+	overflow: hidden;
+	height: 100%;
+}
+
 @import './small';
 @import './medium';
 @import './large';
