--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,53 @@ nav .wrapper .burger .hide {
   opacity: 1;
 }
 
+.sectionoffer .boxheading {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  overflow: hidden;
+}
+.sectionoffer .boxheading__logo {
+  width: 40%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transform: translateY(50%);
+          transform: translateY(50%);
+  opacity: 0;
+  -webkit-transition: opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out, -webkit-transform 0.5s ease-in-out;
+}
+.sectionoffer .boxheading__heading {
+  width: 40%;
+  font-size: 3.2rem;
+  text-align: right;
+  -webkit-transform: translateY(80%);
+          transform: translateY(80%);
+  opacity: 0;
+  -webkit-transition: opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1.2s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 1.2s ease-in-out, -webkit-transform 0.5s ease-in-out;
+}
+.sectionoffer .boxheading .viewboxheading {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+.sectionoffer .line {
+  margin-top: 0.8em;
+  width: 100%;
+}
+
 @media (max-width: 576px) {
   nav .wrapper {
     padding: 0em 1em;
