--- a/sass/style.scss
+++ b/sass/style.scss
@@ -332,6 +332,42 @@ nav {
 	}
 }
 
+// ---OFFER---
+
+.sectionoffer {
+	.boxheading {
+		width: 100%;
+		// height: 25%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		overflow: hidden;
+		&__logo {
+			width: 40%;
+			object-fit: cover;
+			transform: translateY(50%);
+			opacity: 0;
+			transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
+		}
+		&__heading {
+			width: 40%;
+			font-size: 3.2rem;
+			text-align: right;
+			transform: translateY(80%);
+			opacity: 0;
+			transition: transform 0.5s ease-in-out, opacity 1.2s ease-in-out;
+		}
+		.viewboxheading {
+			transform: translateY(0);
+			opacity: 1;
+		}
+	}
+	.line {
+		margin-top: 0.8em;
+		width: 100%;
+	}
+}
+
 @import './small';
 @import './medium';
 @import './large';
