--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -25,16 +25,19 @@
 	.sectionhome {
 		padding: 4em 2em 2em 2em;
 		height: 100vh;
+		justify-content: space-between;
 		.info {
 			padding: 0.2em;
 			height: 40%;
-			margin-bottom: 1em;
+			// margin-bottom: 1em;
 		}
 		.image {
 			height: 40%;
 			img {
 				width: 100%;
 				height: 100%;
+				object-position: top;
+				// object-fit: cover;
 			}
 			&__info {
 				h1 {
