--- a/sass/style.scss
+++ b/sass/style.scss
@@ -127,11 +127,11 @@ nav {
 // ---HOME---
 
 .sectionhome {
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
-	height: 100%;
 	overflow: hidden;
 	.info {
 		padding: 1em;
@@ -140,7 +140,7 @@ nav {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-bottom: 1em;
+		// margin-bottom: 1em;
 		transform: translateY(50%);
 		opacity: 0;
 		transition: transform 1s, opacity 2s ease-in-out;
@@ -189,13 +189,13 @@ nav {
 // ---ABOUT US---
 
 .sectionaboutus {
-	height: 100%;
-	padding: 0em;
+	height: 100vh;
+	padding: 4em 2em 2em 2em;
 	background-image: url('../img/hospital_buoldig.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-size: 275%;
-	background-position: 0% 65px;
+	background-position: 0% 70%;
 	background-attachment: fixed;
 	overflow: hidden;
 	display: flex;
@@ -335,6 +335,7 @@ nav {
 // ---OFFER---
 
 .sectionoffer {
+	height: 100vh;
 	.boxheading {
 		width: 100%;
 		// height: 25%;
