--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -119,4 +119,14 @@
 			}
 		}
 	}
+
+	.sectionoffer {
+		padding: 5em 2em 2em 2em;
+		.boxheading {
+			&__heading {
+				width: 50%;
+				font-size: 2.2rem;
+			}
+		}
+	}
 }
