--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -99,4 +99,12 @@
 			}
 		}
 	}
+	.sectionoffer {
+		padding: 8em 2em 2em 2em;
+		.boxheading {
+			&__heading {
+				font-size: 4.2rem;
+			}
+		}
+	}
 }
