--- a/sass/style.scss
+++ b/sass/style.scss
@@ -338,21 +338,14 @@ nav {
 	height: 100vh;
 	.boxheading {
 		width: 100%;
-		// height: 25%;
+		height: 10%;
 		display: flex;
+		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
 		overflow: hidden;
-		&__logo {
-			width: 40%;
-			object-fit: cover;
-			transform: translateY(50%);
-			opacity: 0;
-			transition: transform 0.5s ease-in-out, opacity 0.8s ease-in-out;
-		}
 		&__heading {
-			width: 40%;
-			font-size: 3.2rem;
+			font-size: 3.8rem;
 			text-align: right;
 			transform: translateY(80%);
 			opacity: 0;
@@ -364,7 +357,7 @@ nav {
 		}
 	}
 	.line {
-		margin-top: 0.8em;
+		margin-top: 0.02em;
 		width: 100%;
 	}
 }
